--- a/css/LetsConnectsub.css
+++ b/css/LetsConnectsub.css
@@ -34,26 +34,21 @@
  SUB PAGE HERO STYLES 
 ================================== */
 .heroElectrical {
-  background-image: url('media/d1a15fa6-f55a-480f-b124-e1c2d14352fc.png'); /* Replace with your image */
- 
+  background-image: url('/Lets-Connect-Sa-Test-/media/d1a15fa6-f55a-480f-b124-e1c2d14352fc.png');
 }
 .heroSecurity {
-  background-image: url('media/80cada0d-27f8-4aca-9572-8e276f287189.png'); /* Replace with your image */
- 
+  background-image: url('/Lets-Connect-Sa-Test-/media/80cada0d-27f8-4aca-9572-8e276f287189.png');
 }
 .heroData {
-  background-image: url('media/d1a15fa6-f55a-480f-b124-e1c2d14352fc.png'); /* Replace with your image */
- 
+  background-image: url('/Lets-Connect-Sa-Test-/media/d1a15fa6-f55a-480f-b124-e1c2d14352fc.png');
 }
 .heroAC {
-  background-image: url('media/73fdca75-1e51-43c5-86ea-715be7c6440b.png'); /* Replace with your image */
- 
+  background-image: url('/Lets-Connect-Sa-Test-/media/73fdca75-1e51-43c5-86ea-715be7c6440b.png');
+}
+.heroSolar {
+  background-image: url('/Lets-Connect-Sa-Test-/media/pexels-photo-5724030.jpeg');
 }
 
-.heroSolar {
-  background-image: url('media/pexels-photo-5724030.jpeg'); /* Replace with your image */
- 
-}
 
 
 /* ================================
